--- a/index.ipynb
+++ b/index.ipynb
@@ -1081,7 +1081,7 @@
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
     "    rank=city_indices[index]\n",
-    "    \n",
+    "    print(srank+name)\n",
     "        \n",
     "    "
    ]
