--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,25 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0Buenos Aires\n",
-      "1Toronto\n",
-      "2Marakesh\n",
-      "3Albuquerque\n",
-      "4Los Cabos\n",
-      "5Greenville\n",
-      "6Archipelago Sea\n",
-      "7Pyeongchang\n",
-      "8Walla Walla Valley\n",
-      "9Salina Island\n",
-      "10Solta\n",
-      "11Iguazu Falls\n"
+      "0.Buenos Aires\n",
+      "1.Toronto\n",
+      "2.Marakesh\n",
+      "3.Albuquerque\n",
+      "4.Los Cabos\n",
+      "5.Greenville\n",
+      "6.Archipelago Sea\n",
+      "7.Pyeongchang\n",
+      "8.Walla Walla Valley\n",
+      "9.Salina Island\n",
+      "10.Solta\n",
+      "11.Iguazu Falls\n"
      ]
     }
    ],
@@ -1080,7 +1080,7 @@
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
     "    rank=city_indices[index]\n",
-    "    print(str(rank)+str(name))\n",
+    "    print(str(rank)+ '.' + str(name))\n",
     "        \n",
     "    "
    ]
