Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1079,7 +1079,7 @@
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
-    "    rank=city_indices[index] + 1\n",
+    "    rank=city_indices[index] \n",
     "    print(str(rank)+ '. ' + str(name))\n",
     "        \n",
     "    "
