--- a/index.ipynb
+++ b/index.ipynb
@@ -1080,7 +1080,7 @@
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
     "    rank=city_indices[index] \n",
-    "    print(str(rank +1)+ '. ' + str(name))\n",
+    "    print(str(rank)+ '. ' + str(name))\n",
     "        \n",
     "    "
    ]
