Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1076,7 +1076,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = []\n",
+    "names_and_ranks += []\n",
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
     "    rank=city_indices[index] +1\n",
