Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,25 +1053,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0. Buenos Aires\n",
-      "1. Toronto\n",
-      "2. Marakesh\n",
-      "3. Albuquerque\n",
-      "4. Los Cabos\n",
-      "5. Greenville\n",
-      "6. Archipelago Sea\n",
-      "7. Pyeongchang\n",
-      "8. Walla Walla Valley\n",
-      "9. Salina Island\n",
-      "10. Solta\n",
-      "11. Iguazu Falls\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-23-50cd2e5af689>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-50cd2e5af689>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(f'(rank)+ '. ' + (name))\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
