--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,11 +1069,12 @@
     }
    ],
    "source": [
-    "names_and_ranks = []\n",
+    "names_and_ranks += []\n",
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
-    "    rank=city_indices[index] \n",
-    "    print((rank)+ '. ' + (name))\n",
+    "    rank=city_indices[index] +1\n",
+    "\n",
+    "    print(str(rank)+ '. ' + str(name))\n",
     "        \n",
     "    "
    ]
