--- a/index.ipynb
+++ b/index.ipynb
@@ -1076,7 +1076,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = [0,1,2,3,4,5,6,7,8,9,10,11]\n",
+    "names_and_ranks = \n",
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
     "    rank=city_indices[index] +1\n",
