Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1082,7 +1082,8 @@
     "    rank=city_indices[index] +1\n",
     "\n",
     "    print(str(rank)+ '. ' + str(name))\n",
-    "        \n",
+    "    return\n",
+    "\n",
     "    "
    ]
   },
