Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,15 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-34-1e30f7453a04>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-1e30f7453a04>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Buenos Aires\n",
+      "2. Toronto\n",
+      "3. Marakesh\n",
+      "4. Albuquerque\n",
+      "5. Los Cabos\n",
+      "6. Greenville\n",
+      "7. Archipelago Sea\n",
+      "8. Pyeongchang\n",
+      "9. Walla Walla Valley\n",
+      "10. Salina Island\n",
+      "11. Solta\n",
+      "12. Iguazu Falls\n"
      ]
     }
    ],
@@ -1071,7 +1081,7 @@
     "    name=city_names[index]\n",
     "    rank=city_indices[index] +1\n",
     "\n",
-    "    return\n",
+    "\n",
     "    print(str(rank)+ '. ' + str(name))\n",
     "    \n",
     "    "
