Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1084,6 +1084,7 @@
     "\n",
     "    print(str(rank)+ '. ' + str(name))\n",
     "    \n",
+    "    print(names_an\n",
     "    "
    ]
   },
