Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1061,17 +1061,29 @@
      "output_type": "stream",
      "text": [
       "1. Buenos Aires\n",
+      "[]\n",
       "2. Toronto\n",
+      "[]\n",
       "3. Marakesh\n",
+      "[]\n",
       "4. Albuquerque\n",
+      "[]\n",
       "5. Los Cabos\n",
+      "[]\n",
       "6. Greenville\n",
+      "[]\n",
       "7. Archipelago Sea\n",
+      "[]\n",
       "8. Pyeongchang\n",
+      "[]\n",
       "9. Walla Walla Valley\n",
+      "[]\n",
       "10. Salina Island\n",
+      "[]\n",
       "11. Solta\n",
-      "12. Iguazu Falls\n"
+      "[]\n",
+      "12. Iguazu Falls\n",
+      "[]\n"
      ]
     }
    ],
@@ -1084,7 +1096,7 @@
     "\n",
     "    print(str(rank)+ '. ' + str(name))\n",
     "    \n",
-    "    print(names_an\n",
+    "    print(names_and_ranks)\n",
     "    "
    ]
   },
