Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = []\n",
+    "names_and_ranks = [:\n",
     "for index in city_indices:\n",
     "    name=city_names[index]\n",
     "    rank=city_indices[index] +1\n",
