--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city_populations in cities"
+    "for city_populations in cities\n"
    ]
   },
   {
