--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city_populations in cities\n"
+    "for city_populations in cities\n",
+    "    ciy"
    ]
   },
   {
