--- a/index.ipynb
+++ b/index.ipynb
@@ -1125,7 +1125,7 @@
    "source": [
     "city_populations = []\n",
     "for city_populations in cities:\n",
-    "    city_names"
+    "    city_names1"
    ]
   },
   {
