--- a/index.ipynb
+++ b/index.ipynb
@@ -1078,9 +1078,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    name=city_names[index]\n",
-    "    rank=city_indices[index] +1\n",
-    "\n",
+    "    names_and_ranks\n",
     "\n",
     "    print(str(rank)+ '. ' + str(name))\n",
     "    \n",
