--- a/index.ipynb
+++ b/index.ipynb
@@ -1078,7 +1078,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append\n",
+    "    names_and_ranks.append(f'{index})\n",
     "\n",
     "    print(str(rank)+ '. ' + str(name))\n",
     "    \n",
