--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1089,23 +1089,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Buenos Aires\n",
-      "2. Toronto\n",
-      "12. Iguazu Falls\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'12. Iguazu Falls'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(names_and_ranks[0]) # '1. Buenos Aires'\n",
     "print(names_and_ranks[1]) # '2. Toronto'\n",
-    "print(names_and_ranks[11]) # '12. Iguazu Falls'"
+    "names_and_ranks[11] # '12. Iguazu Falls'"
    ]
   },
   {
