--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,8 +1122,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city_populations in cities:\n",
-    "    city_names[index]"
+    "for "
    ]
   },
   {
