--- a/index.ipynb
+++ b/index.ipynb
@@ -2124,7 +2124,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "    for city_areas"
+    "    for city_areas in city"
    ]
   },
   {
