Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2124,7 +2124,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "    for city_areas in city"
+    "    for city_areaa in cities:\n",
+    "        "
    ]
   },
   {
