Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2124,7 +2124,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "    for city_areaa in cities:\n",
+    "    for city_area in cities:\n",
     "        "
    ]
   },
