--- a/index.ipynb
+++ b/index.ipynb
@@ -2124,7 +2124,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "    for city_area in cities:\n",
+    "    for city in cities:\n",
+    "        \n",
     "        "
    ]
   },
