--- a/index.ipynb
+++ b/index.ipynb
@@ -2125,7 +2125,7 @@
    "source": [
     "city_areas = []\n",
     "    for city in cities:\n",
-    "        city\n",
+    "        city_areas.append(cit)\n",
     "        "
    ]
   },
