--- a/index.ipynb
+++ b/index.ipynb
@@ -2119,16 +2119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-64-8e884eaa66f6>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-8e884eaa66f6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for city in cities:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[203, 630, 230, 491, 3751, 68, 2000, 1464, 35, 26, 59, 2396]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2136,7 +2138,8 @@
     "\n",
     "for city in cities:\n",
     "        city_areas.append(city['Area'])\n",
-    "        \n",
+    "\n",
+    "city_areas\n",
     "        "
    ]
   },
